Add opening near current tab

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,13 +1,13 @@
 {
   "manifest_version": 2,
   "name": "To DeepL",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Translate selected text in new tab with DeepL",
   "homepage_url": "https://github.com/rewkha/translate-by-extension",
   "icons": {
     "48": "icons/icon.svg"
   },
-  "permissions": ["contextMenus", "storage"],
+  "permissions": ["activeTab", "contextMenus", "storage"],
   "background": {
     "scripts": ["background.js"]
   },
