Add keyboard shortcuts to resolve #1

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -15,5 +15,10 @@
     "browser_style": true,
     "page": "options/options.html",
     "open_in_tab": false
+  },
+  "commands": {
+    "translate-text": {
+      "description": "Send the selected text to DeepL"
+    }
   }
 }
