--- a/src/manifest.json
+++ b/src/manifest.json
@@ -9,7 +9,7 @@
   },
   "permissions": ["activeTab", "contextMenus", "storage"],
   "background": {
-    "scripts": ["background.js"]
+    "page": "background.html"
   },
   "options_ui": {
     "browser_style": true,
